// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JSX > jsx 1`] = `
"export function App() {
  return (
    <div>
      <h1>Hello</h1>
    </div>
  )
}
"
`;

exports[`JavaScript > javascript 1`] = `
"export function App() {
  return 'App'
}
"
`;

exports[`TSX > tsx 1`] = `
"import * as React from 'react'

export interface TAppProps {
  children: React.ReactNode
}

export function App({ children }: TAppProps) {
  return (
    <div>
      <h1>{children}</h1>
    </div>
  )
}
"
`;

exports[`TypeScript > typescript 1`] = `
"interface TAppProps {
  name: string
}

export function App(props: TAppProps) {
  return props.name
}
"
`;
